# declutrr

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-tools.txt  setup.py
.github/workflows/: auto-release.yml  publish.yml  tests.yml
declutrr/: app.py  constants.py  file_manager.py  image_processor.py  tag_manager.py  utils.py
scripts/: auto_tagger.py  blur_detector.py  move.sh  renamer.sh  screenshot.sh  screenshot_detector.py
tests/: __init__.py  generate_test_images.py  test_decluttr.py  test_image_processor.py  test_photo_swiper.py
tests/fixtures/: __init__.py
