[tool.poetry]
name = "declutrr"
version = "0.1.2"
description = "A Date-app-like interface for rapidly sorting photos"
authors = ["Mate Valko <declutrr@valq.hu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vmatt/declutrr"
documentation = "https://github.com/vmatt/declutrr/wiki"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities"
]
packages = [{include = "declutrr"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^11.0.0"


[tool.poetry.extras]
tools = [
    "ultralytics",
    "opencv-python"
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
build = "*"
twine = "*"
piexif = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
declutrr = "declutrr.app:main"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
